--- a/Makefile.in
+++ b/Makefile.in
@@ -406,6 +406,15 @@ AUTOCONF = @AUTOCONF@
 AUTOHEADER = @AUTOHEADER@
 AUTOMAKE = @AUTOMAKE@
 AWK = @AWK@
+CHECK_bc = @CHECK_bc@
+CHECK_df = @CHECK_df@
+CHECK_flock = @CHECK_flock@
+CHECK_fuser = @CHECK_fuser@
+CHECK_locate = @CHECK_locate@
+CHECK_md5sum = @CHECK_md5sum@
+CHECK_rsync = @CHECK_rsync@
+CHECK_shuf = @CHECK_shuf@
+CHECK_updatedb = @CHECK_updatedb@
 CYGPATH_W = @CYGPATH_W@
 DEFS = @DEFS@
 ECHO_C = @ECHO_C@
